2015-11-03  Ola Jeppsson  <ola@adapteva.com>

	* esim/esim.c (es_tx_one_shm_mmr): Fix bug that caused EINVAL on
	all writes to the mmr region.

2015-11-03  Ola Jeppsson  <ola@adapteva.com>

	* sim-main.h: Add long64 and ulong64 typedefs.
	* dv-epiphany_mem.c (epiphany_mem_finish): Use ULL rather than UL for
	64-bit literals.
	(epiphany_mem_signal): Cast to ulong64 when printing address and size.
	(epiphany_mem_io_read_buffer): Likewise.
	(epiphany_mem_io_write_buffer): Likewise.
	* epiphany.c (epiphany_halt_on_inactive): Likewise.
	* esim/esim.c (es_validate_cluster_cfg): Use ULL rather than UL for
	64-bit literals.
	(es_dump_config): Cast to ulong64 when printing address and size.
	* oob-events.c (halt_on_excause): Likewise.
	(halt_on_interrupt): Likewise.
	* sim-if.c (epiphany_option_handler): Use long long type for parsing
	64-bit values.
	* traps.c (sim_engine_invalid_insn): Cast to ulong64 when printing
	address and size.

2015-11-02  Ola Jeppsson  <ola@adapteva.com>

	* sim/epiphany/epiphany.c (epiphany_testset): Delete.
	(epiphany_testset_SI): Delete.
	(epiphany_testset_HI): Delete.
	(epiphany_testset_QI): Delete.
	* sim/epiphany/epiphany-sim.h: Remove above prototypes.
	* sim/epiphany/esim/esim-int.h (es_req_t): Remove ES_REQ_TESTSET enum
	value.
	* sim/epiphany/esim/esim-net.c (es_net_tx_one_mmr): Replace
	ES_REQ_TESTSET case with ES_REQ_ATOMIC_LOAD / ES_REQ_ATOMIC_STORE.
	(es_net_tx_one):
	* sim/epiphany/esim/esim.c (es_addr_translate): Likewise.
	(es_tx_one_shm_testset): Delete.
	(es_tx_one): Remove ES_REQ_TESTSET case.
	(es_mem_store): Use -1 for 'normal' ctrlmode for now.
	(es_mem_load): Likewise.
	(es_mem_testset): Likewise.
	* sim/epiphany/esim/esim.h: Remove es_tx_one_shm_testset prototype.

2015-10-30  Ola Jeppsson  <ola@adapteva.com>

	* epiphany.c (epiphany_atomic_load): Implement.
	(epiphany_atomic_store): Implement.
	* epiphany-sim.h (epiphany_atomic_load): Update prototype.
	* esim/esim-int.h (es_req_t): Add ES_REQ_ATOMIC_LOAD and